Hopefully fix the bug where landscape view mode will break the display

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -10,7 +10,7 @@
   }
 
   html {
-    font-size: clamp(5px, 2vw, 20px);
+    font-size: clamp(10px, 5%, 30px);
   }
 
   html body {
@@ -46,11 +46,11 @@
   }
 
   html body section.content.three .tech i {
-    font-size: clamp(15px, 5vw, 50px);
+    font-size: clamp(30px, 5%, 50px);
   }
 
   html body section.content.three .tech img {
-    width: clamp(15px, 5vw, 50px);
+    width: clamp(30px, 5%, 50px);
   }
 
   html body section.content.four .main-container {
@@ -161,5 +161,11 @@
 
   html body section.content.four .main-container {
     padding: 10px 5px 10px 5px;
+  }
+}
+
+@media only screen and (max-height: 550px) {
+  body {
+    grid-template-rows: 50px 0.5fr 1fr auto 0.25fr !important;
   }
 }
